--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "ss-to-s3",
   "version": "0.1.0",
   "description": "Screenshot to S3",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": { },
   "repository": {
     "type": "git",
     "url": "git@github.com:jfromaniello/ss-to-s3.git"
