--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "~1.2.0",
-    "q": "~0.9.4",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "q": "~0.9.4"
   }
 }
